k8s/prod/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-stable
  namespace: prod
spec:
  host: nginx-stable
  trafficPolicy:
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-canary
  namespace: prod
spec:
  host: nginx-canary
  trafficPolicy:
    tls:
      mode: DISABLE
